--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "db:reset": "npx prisma db push --force-reset && npx prisma db seed"
   },
   "dependencies": {
@@ -31,21 +33,28 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
     "@types/eslint": "^8.56.2",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.16",
     "@types/react": "^18.2.53",
     "@types/react-dom": "^18.2.18",
     "@types/swagger-ui-react": "^4.18.3",
+    "@types/testing-library__react": "^10.2.0",
     "@typescript-eslint/eslint-plugin": "6.20.0",
     "@typescript-eslint/parser": "6.20.0",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.33",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "prisma": "^5.9.1",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.1.5",
     "typescript": "^5.3.3"
   },
   "ct3aMetadata": {
