change structure and add more components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "incremental": true,
     "noUncheckedIndexedAccess": true,
     "baseUrl": ".",
-    "types": ["jest", "@testing-library/jest-dom"],
+    "types": ["node", "jest", "@testing-library/jest-dom"],
     "paths": {
       "~/*": [
         "./src/*"
