--- a/package.json
+++ b/package.json
@@ -14,17 +14,24 @@
   },
   "dependencies": {
     "@prisma/client": "^5.9.1",
+    "@radix-ui/react-checkbox": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.2.1",
     "@t3-oss/env-nextjs": "^0.8.0",
     "@tanstack/react-query": "^5.18.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "lucide-react": "^0.396.0",
     "next": "^14.1.0",
     "next-swagger-doc": "^0.4.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "swagger-ui-react": "^5.11.2",
     "tailwind-merge": "^2.2.1",
