--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "db:reset": "npx prisma db push --force-reset && npx prisma db seed"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.4.2",
+    "@internationalized/date": "^3.5.4",
     "@prisma/client": "^5.9.1",
     "@radix-ui/react-checkbox": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.2.1",
+    "@react-stately/datepicker": "^3.9.4",
     "@t3-oss/env-nextjs": "^0.8.0",
     "@tanstack/react-query": "^5.18.1",
     "class-variance-authority": "^0.7.0",
@@ -31,8 +35,11 @@
     "next-swagger-doc": "^0.4.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
+    "react-aria": "^3.33.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.52.0",
+    "react-stately": "^3.31.1",
     "swagger-ui-react": "^5.11.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
